# fitness-evaluator

./: .env.example  .env.template  .gitignore  CHAT_MEMORY_FIX.md  DASHBOARD_GOALS_ADDED.md  Dockerfile  FRONTEND_GUIDE.md  GOAL_TOOL_IMPROVEMENT.md  README.md  SESSION_MANAGEMENT_FIX.md  WHATS_NEW_REACT.md  alembic.ini  docker-compose.yml  docker-run.ps1  docker-run.sh  main.py  pyproject.toml  setup-ollama.ps1  start.ps1  struct.txt  test_activity_detail.py  test_app.py  test_athlete_goal_contract.py  test_chat_message_ordering.py  test_chat_session_integration.py  test_daily_log_list.html  test_dashboard_api.py  test_effort_analysis.py  test_eval_service_refactor.py  test_evaluation_score_bounds.py  test_evaluations_api_get_by_id.py  test_evidence_card_validators.py  test_evidence_mapper_integration.py  test_faiss_index_consistency.py  test_get_athlete_goals_tool.py  test_get_recent_activities_tool.py  test_goals_api.html  test_import.py  test_import2.py  test_inline_edit_integration.py  (+23 more)
alembic/: env.py
app/: config.py  database.py  main copy.py  main.py  telemetry_database.py
docs/: backward_compatibility_evidence.md  session_matcher_implementation.md  tool_configuration.md  tool_usage_example.py
examples/: session_matcher_usage.py
migrations/: README.md  add_training_plan_schema.py
public/: activities.html  activity-detail.html  chat.html  evaluation-detail.html  evaluation.html  evaluations-list.html  index.html  landing.html  llm-cost.html  logs.html  measurements.html  metrics.html  old_index.html  settings.html  sidebar-demo.html  targets.html  (+6 more)
(+438 files in other folders)
