[project]
name = "fitness-eval"
version = "0.1.0"
description = "Fitness Platform V2 - AI-powered athlete coaching platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    # V2 Platform Dependencies
    "cryptography>=44.0.0", # For Fernet token encryption
    "faiss-cpu>=1.9.0", # Vector similarity search for RAG
    "sentence-transformers>=3.3.0", # Embeddings generation (all-MiniLM-L6-v2)
    "sse-starlette>=2.2.1", # Server-Sent Events for LLM streaming
    "hypothesis>=6.122.3", # Property-based testing
]
